[fix ] unknown flicker in swiping specified element

--- a/src/css/components/carousel/_carousel.scss
+++ b/src/css/components/carousel/_carousel.scss
@@ -8,9 +8,20 @@
     width: 100%;
 
     a {
+
+      /* Enable Hardware Acceleration
+       *
+       * putting the process of animation into GPU to execute by declaration `transform`.
+       * but, i have no idea for how it works.
+       */
+      -moz-transform: translate3d(0, 0, 0);
+      -ms-transform: translate3d(0, 0, 0);
+      -o-transform: translate3d(0, 0, 0);
+      -webkit-transform: translate3d(0, 0, 0);
       float: left;
       max-width: 100%;
       min-width: 100%;
+      transform: translate3d(0, 0, 0);
       width: 100%;
     }
 
